Palette swap for accessibility / kibana 6 (#12085)
Recolor Kibana for Accessibility. Attempt to clean up spacing / layout irregularities by adding some level of global variable control. Major changes are:

* better animation against login
* switch to colored kibana logo
* add docs for secondary buttons in kui, addjust hover states
* simplify focus states
* adjust svg rects for discover graph to be lighter
* add ui select overwrite file, adjust new filter selector to match palette changes
* make spy usable in discovery
* panel withHeader removed completely, tests updated

--- a/components/_common_styles.scss
+++ b/components/_common_styles.scss
@@ -7,6 +7,11 @@
   }
 }
 
+// Removes outline, but still provides a two color box shadow that works anywhere.
+:focus {
+  @include focus;
+}
+
 body {
   font-family: $globalFontFamily;
 }
