--- a/components/form/_check_box.scss
+++ b/components/form/_check_box.scss
@@ -1,7 +1,7 @@
 $checkboxBackgroundColor: #FFF;
 $checkboxBorderColor: #BEBEBE;
 $checkboxIconColor: #FFF;
-$checkboxCheckedBackgroundColor: #328CAA;
+$checkboxCheckedBackgroundColor: $globalColorBlue;
 $checkboxDisabledOpacity: 0.3;
 
 
