--- a/components/form/_select.scss
+++ b/components/form/_select.scss
@@ -1,10 +1,14 @@
 .kuiSelect {
   @include select;
-
   @include formControl;
 
   &.kuiSelect-isInvalid {
     @include formControlInvalid;
+  }
+
+  &:focus {
+    box-shadow: none;
+    @include formControlFocus;
   }
 }
 
