--- a/components/local_nav/_index.scss
+++ b/components/local_nav/_index.scss
@@ -1,21 +1,21 @@
 // Normal colors
 $localNavTextColor: $globalTextColor;
-$localNavBackgroundColor: #e4e4e4;
-$localNavButtonTextColor: #5a5a5a;
-$localNavButtonTextColor-isHover: #000000;
+$localNavBackgroundColor: $globalColorWhite;
+$localNavButtonTextColor: $globalTextColor;
+$localNavButtonTextColor-isHover: $globalColorLightestGray;
 $localNavButtonBackgroundColor: transparent;
-$localNavButtonBackgroundColor-isHover: rgba(#000000, 0.1);
-$localNavButtonBackgroundColor-isSelected: #f6f6f6;
+$localNavButtonBackgroundColor-isHover: $globalColorBlue;
+$localNavButtonBackgroundColor-isSelected: $globalColorLightestGray;
 $localNavBreadcrumbDelimiterColor: #5a5a5a;
 $localSearchBackgroundColor: #ffffff;
 $localSearchBorderColor-isInvalid: #e74C3c;
 $localDropdownBackgroundColor: $localNavButtonBackgroundColor-isSelected;
 $localDropdownFormNoteTextColor: #737373;
-$localTabTextColor: $localNavButtonTextColor;
-$localTabTextColor-isHover: $localNavButtonTextColor-isHover;
-$localTabTextColor-isSelected: $localNavButtonTextColor-isHover;
-$localBreadcrumbLinkColor: #328caa;
-$localSearchButtonBackgroundColor: #9c9c9c;
+$localTabTextColor: $globalColorDarkestGray;
+$localTabTextColor-isHover: $globalColorBlue;
+$localTabTextColor-isSelected: $globalColorBlue;
+$localBreadcrumbLinkColor: $globalColorBlue;
+$localSearchButtonBackgroundColor: $globalColorDarkGray;
 $localSearchButtonTextColor: #ffffff;
 $localDatePickerButtonHoverBackgroundColor: $localNavButtonBackgroundColor-isHover;
 $localDatePickerCellSelectedBackgroundColor: #777777;
