--- a/components/table/_table.scss
+++ b/components/table/_table.scss
@@ -14,7 +14,7 @@
  */
 .kuiTable {
   width: 100%;
-  border: $globalBorderThick;
+  border: $globalBorderThin;
   border-collapse: collapse;
   background-color: $tableBackgroundColor;
 }
