--- a/components/tabs/_tabs.scss
+++ b/components/tabs/_tabs.scss
@@ -1,7 +1,8 @@
 .kuiTabs {
   display: flex;
-  border-bottom: $globalBorderThick;
+  border-bottom: $globalBorderThin;
 }
+
 
 /**
  * 1. Override button styles (some of which are from Bootstrap).
@@ -18,9 +19,9 @@
   color: $globalSubduedTextColor;
   background-color: $tabBackgroundColor; /* 1 */
   border: 1px solid $globalBorderColor;
-  border-bottom-width: 2px;
+  border-bottom-width: 1px;
   border-radius: 0; /* 1 */
-  margin-bottom: -2px; /* 3 */
+  margin-bottom: -1px; /* 3 */
 
   & + & {
     border-left: none;
@@ -43,7 +44,6 @@
     z-index: 1;
     color: $globalLinkColor;
     border: 1px solid $globalSelectedBorderColor !important;
-    padding-bottom: 11px; /* 4 */
   }
 
   &:hover:not(.kuiTab-isSelected) {
