--- a/components/tool_bar/_tool_bar_search.scss
+++ b/components/tool_bar/_tool_bar_search.scss
@@ -50,7 +50,7 @@
     color: $globalFontColor;
     border-radius: $globalBorderRadius;
     font-size: 1em;
-    border: 1px solid #ffffff;
+    border: 1px solid $globalColorLightGray;
     line-height: normal; /* 1 */
     transition: border-color $globalInputTransitionTiming;
 
