--- a/doc_site/src/views/table/controlled_table_no_items.html
+++ b/doc_site/src/views/table/controlled_table_no_items.html
@@ -43,7 +43,7 @@
   </div>
 
   <!-- TableInfo -->
-  <div class="kuiPanel kuiPanel--centered kuiPanel--withHeader">
+  <div class="kuiPanel kuiPanel--centered kuiPanel--withToolbar">
     <div class="kuiTableInfo">
       No Items matched your search.
     </div>
