--- a/components/button/_button.scss
+++ b/components/button/_button.scss
@@ -18,20 +18,14 @@
   border-radius: $globalBorderRadius;
 
   @include kuiButtonDisabled {
-    cursor: default;
+    cursor: not-allowed;
+    opacity: .5;
   }
 
   @include kuiButtonActive {
     transform: translateY(1px);
   }
 
-  &:focus {
-    outline: none; /* 2 */
-  }
-
-  @include kuiButtonFocus {
-    @include focus;
-  }
 }
 
   /**
@@ -89,12 +83,7 @@
   }
 
   @include kuiButtonHoverAndActive {
-    color: $buttonDefaultTextColor !important; /* 1 */
     background-color: $buttonBasicHoverBackgroundColor !important; /* 1 */
-  }
-
-  @include kuiButtonDisabled {
-    color: $buttonBasicDisabledTextColor;
   }
 
   @include darkTheme {
@@ -108,10 +97,6 @@
 
     @include kuiButtonHoverAndActive {
       background-color: $buttonBasicHoverBackgroundColor--darkTheme !important; /* 1 */
-    }
-
-    @include kuiButtonDisabled {
-      color: rgba($buttonBasicTextColor--darkTheme, 0.5);
     }
   }
 }
@@ -131,9 +116,22 @@
     color: $buttonDefaultTextColor !important; /* 1 */
     background-color: $buttonPrimaryHoverBackgroundColor;
   }
+}
 
-  @include kuiButtonDisabled {
-    background-color: $buttonPrimaryDisabledBackgroundColor;
+/**
+ * 1. Override Bootstrap.
+ */
+.kuiButton--success {
+  color: $buttonDefaultTextColor;
+  background-color: $buttonSuccessBackgroundColor;
+
+  @include kuiButtonFocus {
+    color: $buttonDefaultTextColor;
+  }
+
+  @include kuiButtonHoverAndActive {
+    color: $buttonDefaultTextColor !important; /* 1 */
+    background-color: $buttonSuccessHoverBackgroundColor;
   }
 }
 
@@ -141,21 +139,19 @@
  * 1. Override Bootstrap.
  */
 .kuiButton--danger {
-  color: $buttonDefaultTextColor;
-  background-color: $buttonDangerBackgroundColor;
+  color: $globalColorRed;
+  background-color: rgba($globalColorWhite, 0.5);
+  border: solid 1px $globalColorRed;
 
   @include kuiButtonFocus {
     @include focus($globalFocusDangerColor);
-    color: $buttonDefaultTextColor;
+    color: $globalColorRed;
   }
 
   @include kuiButtonHoverAndActive {
-    color: $buttonDefaultTextColor !important; /* 1 */
-    background-color: $buttonDangerHoverBackgroundColor;
-  }
-
-  @include kuiButtonDisabled {
-    background-color: $buttonDangerDisabledBackgroundColor;
+    color: darken($globalColorRed, 10%) !important;
+    background-color: rgba(lighten($globalColorRed, 50%), 0.5);
+    border: solid 1px darken($globalColorRed, 10%);
   }
 }
 
@@ -193,8 +189,16 @@
     color: $globalLinkHoverColor !important; /* 1 */
     text-decoration: underline;
   }
+}
 
-  @include kuiButtonDisabled {
-    color: $buttonHollowDiabledTextColor;
+.kuiButton--secondary {
+  color: $globalLinkColor !important; /* 2 */
+  border: solid 1px $globalColorBlue;
+  background-color: rgba($globalColorWhite, 0.5);
+
+  @include kuiButtonHoverAndActive {
+    color: darken($globalLinkColor, 10%) !important; /* 1 */
+    border: solid 1px darken($globalColorBlue, 10%);
+    background-color: rgba(lighten($globalLinkColor, 50%), 0.5);
   }
 }
