--- a/components/local_nav/_local_search.scss
+++ b/components/local_nav/_local_search.scss
@@ -7,8 +7,7 @@
   @include formControl;
   flex: 1 1 100%;
   border-color: $localSearchBackgroundColor;
-  border-top-color: $localSearchBackgroundColor;
-  border-bottom-color: $localSearchBackgroundColor;
+  border-color: $globalColorLightGray;
   border-radius: $globalBorderRadius 0 0 $globalBorderRadius;
 
   &.kuiLocalSearchInput-isInvalid {
@@ -41,6 +40,7 @@
     position: absolute;
     right: $globalFormControlHorizontalPadding;
     top: 50%; /* 1 */
+    z-index: 2;
     transform: translateY(-50%); /* 1 */
   }
 
