--- a/components/menu_button/_index.scss
+++ b/components/menu_button/_index.scss
@@ -6,7 +6,7 @@ $menuButtonBasicHoverBackgroundColor: #F2F2F2;
 $menuButtonBasicDisabledTextColor: #9B9B9B;
 
 $menuButtonPrimaryTextColor: #ffffff;
-$menuButtonPrimaryBackgroundColor: #6EADC1;
+$menuButtonPrimaryBackgroundColor: $globalColorBlue;
 $menuButtonPrimaryHoverBackgroundColor: #006E8A;
 $menuButtonPrimaryDisabledBackgroundColor: #B6D6E0;
 
