--- a/components/modal/_index.scss
+++ b/components/modal/_index.scss
@@ -1,7 +1,7 @@
 $modalPadding: 10px;
-$modalBorderColor: #6EADC1;
+$modalBorderColor: $globalColorLightGray;
 $modalBackgroundColor: #FFF;
-$modalOverlayBackground: rgba(#000000, 0.3);
+$modalOverlayBackground: rgba(#000000, 0.5);
 $globalModalDepth: 1000;
 
 @import "modal_overlay";
