--- a/components/modal/_modal.scss
+++ b/components/modal/_modal.scss
@@ -3,7 +3,7 @@
   background-color: $modalBackgroundColor;
   border: 1px solid $modalBorderColor;
   border-radius: $globalBorderRadius;
-  box-shadow: 0 5px 22px rgba(#000000, 0.25);
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.1);
   z-index: $globalModalDepth + 1;
 }
 
@@ -12,7 +12,8 @@
   justify-content: space-between;
   align-items: center;
   padding: $modalPadding;
-  border-bottom: $globalBorderThick;
+  padding-left: $modalPadding * 2;
+  border-bottom: $globalBorderThin;
 }
 
   .kuiModalHeader__title {
@@ -25,7 +26,7 @@
 }
 
 .kuiModalBody {
-  padding: $modalPadding * 2 $modalPadding;
+  padding: $modalPadding * 2;
 }
 
 .kuiModalBodyText {
@@ -35,7 +36,8 @@
 .kuiModalFooter {
   display: flex;
   justify-content: flex-end;
-  padding: 0 $modalPadding $modalPadding;
+  padding: $modalPadding * 2;
+  padding-top:: $modalPadding;
 
   > * + * {
     margin-left: 5px;
