Fix examples of Table component with ToolBar. (#12326)

--- a/doc_site/src/views/table/controlled_table_empty_table_prompt.html
+++ b/doc_site/src/views/table/controlled_table_empty_table_prompt.html
@@ -43,7 +43,7 @@
   </div>
 
   <!-- EmptyTablePrompt -->
-  <div class="kuiPanel kuiPanel--centered kuiPanel--withToolbar">
+  <div class="kuiPanel kuiPanel--centered kuiPanel--withToolBar">
     <div class="kuiEmptyTablePrompt">
       <div class="kuiEmptyTablePrompt__message">
         Looks like you don&rsquo;t have any items. Let&rsquo;s add some!
