Add new react color picker to ui framework with tests (#12245)
* Add new react color picker to ui framework with tests

In prep for dashboard color customization.

* address code review comments

* second round of feedback

* nativeEvent not available in a headless browser, so jenkins tests will fail without a check

* move aria-label

* Require color and have components pass undefined to use default color

* update snapshots after aria-label move

* get rid of default color

* user display: inline-block so clickable is only the width of box and lab el

--- a/components/index.scss
+++ b/components/index.scss
@@ -25,6 +25,7 @@
 @import "button/index";
 @import "card/index";
 @import "collapse_button/index";
+@import "color_picker/index";
 @import "column/index";
 @import "event/index";
 @import "expression/index";
