--- a/doc_site/src/views/expression/expression.html
+++ b/doc_site/src/views/expression/expression.html
@@ -42,12 +42,18 @@
     </div>
     <div class="kuiExpressionItem__popoverContent">
       <select class="kuiSelect">
+        <option label="A" selected="selected">A</option>
+        <option label="B">B</option>
+        <option label="C">C</option>
+      </select>
+
+      <input type="text" class="kuiTextInput kuiTextInput--small" value="100" />
+
+      <select class="kuiSelect kuiSelect--large">
         <option label="is above" selected="selected">is above</option>
         <option label="is below">is below</option>
         <option label="is exactly">is exactly</option>
       </select>
-      <input type="text" class="kuiTextInput" value="100" />
     </div>
   </div>
 </div>
-
