--- a/components/_variables.scss
+++ b/components/_variables.scss
@@ -95,3 +95,6 @@ $toolBarItsemSpacing: 10px;
 $globalFormControlHorizontalPadding: 12px;
 $globalFormControlPadding: 3px $globalFormControlHorizontalPadding 4px;
 $globalFormInputHeight: 30px;
+$globalFormFieldDefaultWidth: 180px;
+$globalFormFieldSmallWidth: 60px;
+$globalFormFieldLargeWidth: 400px;
