--- a/doc_site/src/views/form/search_input.html
+++ b/doc_site/src/views/form/search_input.html
@@ -17,3 +17,25 @@
     placeholder="Search..."
   >
 </div>
+
+<hr class="guideBreak">
+
+<div class="kuiSearchInput kuiSearchInput--small">
+  <div class="kuiSearchInput__icon kuiIcon fa-search"></div>
+  <input
+    class="kuiSearchInput__input"
+    type="text"
+    placeholder="Small..."
+  >
+</div>
+
+<hr class="guideBreak">
+
+<div class="kuiSearchInput kuiSearchInput--large">
+  <div class="kuiSearchInput__icon kuiIcon fa-search"></div>
+  <input
+    class="kuiSearchInput__input"
+    type="text"
+    placeholder="Large..."
+  >
+</div>
