Fix appearance of error indicator in Visualize sidebar. Give kuiIcon--error correct color. (#12410)

--- a/components/_variables.scss
+++ b/components/_variables.scss
@@ -64,7 +64,7 @@ $globalInfoColor: #3fa8c7;
 $globalInactiveColor: #c3c3c3;
 $globalSuccessColor: #417505;
 $globalWarningColor: #ec9800;
-$globalDangerColor: #D86051;
+$globalDangerColor: $globalColorRed;
 $globalFocusColor: $globalColorBlue;
 $globalFocusDangerColor: #ff523c;
 $globalFocusWarningColor: #ffa500;
