Add label and clear link to color picker (#12422)
* Add label and clear link to color picker

* address code comments

* Add extra example for no color label

* Remove unnecessary div

* Add tests for showColorLabel and transparent color choice

--- a/components/color_picker/_color_picker.scss
+++ b/components/color_picker/_color_picker.scss
@@ -1,6 +1,5 @@
 .kuiColorPicker {
   cursor: pointer;
-  display: inline-block
 }
 
   .kuiColorPicker__preview {
@@ -13,6 +12,20 @@
     height: $colorPickerSize;
     border-radius: $globalBorderRadius;
     box-shadow: inset 0 0 0 1px rgba(#000, 0.2);
+    display: inline-block;
+  }
+
+  .kuiColorPicker__emptySwatch {
+    svg {
+      position: absolute;
+      width: $colorPickerSize;
+      height: $colorPickerSize;
+    }
+
+    svg line {
+      stroke: rgb(255, 0, 0);
+      stroke-width: 2;
+    }
   }
 
   .kuiColorPicker__label {
