[UI Framework] Order UI Framework React component exports to be alphabetical (#12526)
* Order UI Framework React component exports to be alphabetical.
* Add globalBoxShadow variable.

--- a/components/_variables.scss
+++ b/components/_variables.scss
@@ -22,6 +22,7 @@ $globalColorWhite: #FFF;
 
 
 // Normal colors
+
 $globalTextColor: #2d2d2d;
 $globalLinkColor: $globalColorBlue;
 $globalLinkColor-isHover: darken($globalLinkColor, 10%);
@@ -42,6 +43,7 @@ $globalAnimSpeedVerySlow: 500ms;
 
 
 // Dark theme colors
+
 $globalTextColor--darkTheme: #cecece;
 $globalBackgroundColor--darkTheme: #777777;
 $globalLinkColor--darkTheme: #b7e2ea;
@@ -51,6 +53,7 @@ $globalInputBackgroundColor--darkTheme: #444444;
 $globalInputBorderColor--darkTheme: $globalInputBackgroundColor--darkTheme;
 
 // Font
+
 $globalFontFamily: "Open Sans", Helvetica, Arial, sans-serif;
 $globalFontSize: 14px;
 $globalLineHeight: 1.5;
@@ -60,6 +63,7 @@ $globalFontWeightRegular: 400;
 $globalFontWeightBold: 700;
 
 // Colors
+
 $globalInfoColor: #3fa8c7;
 $globalInactiveColor: #c3c3c3;
 $globalSuccessColor: #417505;
@@ -77,21 +81,29 @@ $globalDangerBorderColor: $globalDangerColor;
 $globalFormControlBorderColor: #DEDEDE;
 
 // Borders
+
 $globalBorderColor: $globalColorLightGray;
 $globalBorderRadius: 4px;
 $globalBorderThick: 2px solid $globalBorderColor;
 $globalBorderThin: 1px solid $globalBorderColor;
 
+// Shadows
+
+$globalBoxShadow: 0 4px 8px 0 rgba(0, 0, 0, 0.1);
+
 // Timing
+
 $globalInputTransitionTiming: 0.1s linear;
 
 // Bar
+
 $toolBarHeight: 50px;
 $toolBarPadding: 10px;
 $toolBarSectionSpacing: 50px;
 $toolBarItsemSpacing: 10px;
 
 // Form
+
 $globalFormControlHorizontalPadding: 12px;
 $globalFormControlPadding: 3px $globalFormControlHorizontalPadding 4px;
 $globalFormInputHeight: 30px;
