--- a/components/modal/_modal.scss
+++ b/components/modal/_modal.scss
@@ -3,7 +3,7 @@
   background-color: $modalBackgroundColor;
   border: 1px solid $modalBorderColor;
   border-radius: $globalBorderRadius;
-  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.1);
+  box-shadow: $globalBoxShadow;
   z-index: $globalModalDepth + 1;
 }
 
