Allow kuiLocalNavRow to expand vertically if the content wraps. (#12606)

--- a/components/local_nav/_local_nav.scss
+++ b/components/local_nav/_local_nav.scss
@@ -20,11 +20,14 @@
   }
 }
 
+/**
+ * 1. Allow row to expand if the content is so long that it wraps.
+ */
 .kuiLocalNavRow {
   display: flex;
   align-items: center;
   justify-content: space-between;
-  height: 29px;
+  min-height: 29px; /* 1 */
 }
 
 .kuiLocalNavRow__section {
