Interface changes to toggle directives, and add disabled state (#12655)
* Add kuiToggleButton disabled state.
* Add isDisabled attribute to toggleButton and togglePanel directives.
* Redesign toggleButton and togglePanel directive interfaces to use transclusion instead of attributes, and scope-bound attribute over DOM-bound attribute..
* Use attribute binding.
* Rename 'toggleButtonLabel' attribute to 'buttonText'.

--- a/components/toggle_button/_toggle_button.scss
+++ b/components/toggle_button/_toggle_button.scss
@@ -20,9 +20,14 @@
     color: $globalLinkColor !important; /* 2 */
   }
 
-  &:hover {
+  &:hover:not(:disabled) {
     color: $globalLinkHoverColor !important; /* 2 */
     text-decoration: underline;
+  }
+
+  &:disabled {
+    cursor: not-allowed;
+    opacity: .5;
   }
 }
 
