Update LocalNav layout to fix menu button hover state. (#12739)

--- a/components/local_nav/_local_nav.scss
+++ b/components/local_nav/_local_nav.scss
@@ -25,13 +25,14 @@
  */
 .kuiLocalNavRow {
   display: flex;
-  align-items: center;
+  align-items: stretch;
   justify-content: space-between;
   min-height: 29px; /* 1 */
 }
 
 .kuiLocalNavRow__section {
-  height: 100%;
+  display: flex;
+  align-items: stretch;
 }
 
 /**
