[Framework/Accessibility] Add kuiScreenReaderOnly class (#13133)
* [Framework/Accessibility] Add kuiScreenReaderOnly class

* fix typo

* use GuideLink

* add screen_reader react component and tests

* export KuiScreenReaderOnly

* --wip-- [skip ci]

* fix lint rule

* remove obsolete snapshots

--- a/components/index.scss
+++ b/components/index.scss
@@ -19,6 +19,7 @@
 @import "common_styles";
 
 // Components
+@import "accessibility/index";
 @import "action_item/index";
 @import "badge/index";
 @import "bar/index";
