Fix accessibility issues with saved object finder (#13152)
* Fix accessibility issues with saved object finder

and use new kui styles

* Dark theme-icy kuiTabs

* Refer to existing dark theme color variables.  Use dark theme hover link color.

* use button instead of div element so no need for kbn-accessible-click

* Add dark theme tab variety to ui framework site, lighten color of background tabs

--- a/components/tabs/_tabs.scss
+++ b/components/tabs/_tabs.scss
@@ -1,6 +1,10 @@
 .kuiTabs {
   display: flex;
   border-bottom: $globalBorderThin;
+
+  @include darkTheme {
+    border-bottom: 1px solid $tabBorderColor--darkTheme;
+  }
 }
 
 
@@ -19,9 +23,14 @@
   color: $globalSubduedTextColor;
   background-color: $tabBackgroundColor; /* 1 */
   border: 1px solid $globalBorderColor;
-  border-bottom-width: 1px;
   border-radius: 0; /* 1 */
   margin-bottom: -1px; /* 3 */
+
+  @include darkTheme {
+    color: $tabColor--darkTheme;
+    background-color: $tabBackgroundColor--darkTheme;
+    border-color: $tabBorderColor--darkTheme;
+  }
 
   & + & {
     border-left: none;
@@ -44,16 +53,33 @@
     z-index: 1;
     color: $globalLinkColor;
     border: 1px solid $globalSelectedBorderColor !important;
+
+    @include darkTheme {
+      color: $tabColor--darkTheme;
+      background-color: $tabBackgroundColor--darkTheme;
+      border-color: $tabBorderColor--darkTheme !important;
+    }
   }
 
   &:hover:not(.kuiTab-isSelected) {
     color: $globalLinkHoverColor;
     background-color: $tabHoverBackgroundColor;
+
+    @include darkTheme {
+      color: $globalLinkColor-isHover--darkTheme;
+      background-color: $tabHoverBackgroundColor--darkTheme;
+    }
   }
 
   &.kuiTab-isSelected {
     cursor: default;
     color: $globalFontColor;
     border-bottom-color: $tabBackgroundColor;
+
+    @include darkTheme {
+      color: $tabColor--darkTheme;
+      background-color: $tabBackgroundColor--darkTheme;
+      border-bottom-color: $tabBackgroundColor--darkTheme;
+    }
   }
 }
