port k7 popover component over (#13322)
* port k7 popover component over

* Fix line height

* Clean up css

--- a/components/index.scss
+++ b/components/index.scss
@@ -46,6 +46,7 @@
 @import "notice/index";
 @import "pager/index";
 @import "panel/index";
+@import "popover/index";
 @import "empty_table_prompt/index";
 @import "status_text/index";
 @import "table/index";
