[UI Framework] Add functionality for hiding and showing the chrome when viewing Sandboxes (#13475)
* Update UI Framework doc site with functionality for hiding and showing the chrome when viewing Sandboxes. (#13437)
* Fix formatting in generator-kui templates. (#13443)

--- a/doc_site/src/components/guide/_guide.scss
+++ b/doc_site/src/components/guide/_guide.scss
@@ -25,6 +25,7 @@ html {
   padding-top: $guideNavHeight;
   background-color: $guideBaseBackgroundColor;
   transition:
+    padding-top $guideChromeTransition,
     padding-right $guideCodeViewerTransition,
     opacity $guideCodeViewerTransition;
 
@@ -38,6 +39,10 @@ html {
 
   .is-guide-nav-open + & {
     opacity: 0.7;
+  }
+
+  &.is-chrome-hidden {
+    padding-top: 0;
   }
 }
 
