--- a/doc_site/src/components/guide_components.scss
+++ b/doc_site/src/components/guide_components.scss
@@ -6,6 +6,7 @@ $guideSideNavSmallWidth: 220px;
 $guideCodeViewerWidth: 660px;
 $guideCodeViewerSmallWidth: 520px;
 $guideCodeViewerTransition: 0.2s ease;
+$guideChromeTransition: 0.3s ease;
 
 // Colors
 $guideBaseBackgroundColor: #f7f7f7;
