--- a/src/components/modal/_index.scss
+++ b/src/components/modal/_index.scss
@@ -4,5 +4,9 @@ $modalBackgroundColor: #FFF;
 $modalOverlayBackground: rgba(#000000, 0.5);
 $globalModalDepth: 1000;
 
+// Dark theme colors
+$modalBorderColor--darkTheme: #000;
+$modalBackgroundColor--darkTheme: #525252;
+
 @import "modal_overlay";
 @import "modal";
