--- a/src/components/modal/_modal.scss
+++ b/src/components/modal/_modal.scss
@@ -5,6 +5,11 @@
   border-radius: $globalBorderRadius;
   box-shadow: $globalBoxShadow;
   z-index: $globalModalDepth + 1;
+
+  @include darkTheme {
+    background-color: $modalBackgroundColor--darkTheme;
+    border-color: $modalBorderColor--darkTheme;
+  }
 }
 
 .kuiModalHeader {
@@ -14,10 +19,18 @@
   padding: $modalPadding;
   padding-left: $modalPadding * 2;
   border-bottom: $globalBorderThin;
+
+  @include darkTheme {
+    border-bottom-color: $modalBorderColor--darkTheme;
+  }
 }
 
   .kuiModalHeader__title {
     font-size: $globalTitleFontSize;
+
+    @include darkTheme {
+      color: $globalTextColor--darkTheme;
+    }
   }
 
 .kuiModalHeaderCloseButton {
@@ -31,13 +44,17 @@
 
 .kuiModalBodyText {
   font-size: 14px;
+
+  @include darkTheme {
+    color: $globalTextColor--darkTheme;
+  }
 }
 
 .kuiModalFooter {
   display: flex;
   justify-content: flex-end;
   padding: $modalPadding * 2;
-  padding-top:: $modalPadding;
+  padding-top: $modalPadding;
 
   > * + * {
     margin-left: 5px;
