[Accessibility] Make table pagination controls keyboard-accessible.  (#13541)
* Make table pagination controls keyboard-accessible. Update KuiLink so it can be used on a button element.
* Add additional properties to link mixin to make kuiLink look the same for both buttons and anchor tags.
* Fix tests.

--- a/src/global_styling/mixins/_global_mixins.scss
+++ b/src/global_styling/mixins/_global_mixins.scss
@@ -6,11 +6,17 @@
 
 /**
  * 1. Enforce pointer when there's no href.
+ * 2. Allow these styles to be applied to a button element.
  */
 @mixin link {
   color: $globalLinkColor;
+  text-decoration: none;
   cursor: pointer; /* 1 */
-  font-weight: 500;
+  appearance: none; /* 2 */
+  background-color: transparent; /* 2 */
+  border: none; /* 2 */
+  font-size: inherit; /* 2 */
+  line-height: inherit; /* 2 */
 
   &:visited,
   &:active {
