Makes styles in the style guide hot reloadable

--- a/docs/src/theme_light.scss
+++ b/docs/src/theme_light.scss
@@ -1,3 +1,3 @@
-@import "../../src/global_styling/theme_light_variables";
+@import "../../src/theme_light";
 @import "./components/guide_components";
 
